--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
     "react-scripts": "5.0.1"
   },
   "devDependencies": {
+    "gh-pages": "^6.1.1",
     "typescript": "3.3.3"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
@@ -25,5 +28,6 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "homepage": "https://akabaneizumi.github.io/score-tracker"
 }
